--- a/sensors_client.html
+++ b/sensors_client.html
@@ -4,16 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Данные датчиков</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js"></script>
-		<style>
-			body {
-				font-family: Arial, sans-serif;
-				text-align: center;
-			}
-			.red {
-				color: red;
-			}
-		</style>
+		<script
+			src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js"
+			type="text/javascript"
+		></script>
+		<link rel="stylesheet" href="./sensor_client.css" />
 	</head>
 	<body>
 		<h1>Данные датчиков</h1>
@@ -33,9 +28,9 @@
 		<script>
 			const client = new Paho.MQTT.Client(
 				"test.mosquitto.org",
-				Number(8080),
+				Number(8081),
 				"",
-				"sensors_client_js"
+				"sensors_client_js_2"
 			);
 
 			client.onConnectionLost = onConnectionLost;
