--- a/sensors_client.html
+++ b/sensors_client.html
@@ -21,20 +21,60 @@
 				<div class="nav_menu">
 					<p>Menu</p>
 					<div class="nav_menu_1">
-						<a href="">Menu</a>
-						<a href="">Insights</a>
-						<a href="">Recommends</a>
-						<a id="messages" href="">Messages</a>
+						<ul>
+							<li><a href="">Menu</a></li>
+							<li><a href="">Insights</a></li>
+							<li><a href="">Recommends</a></li>
+							<li><a id="messages" href="">Messages</a></li>
+						</ul>
 					</div>
 					<p>Settings</p>
 					<div class="nav_menu_2">
-						<a href="">Profile</a>
-						<a href="">FAQ’s</a>
-						<a href="">Contact us</a>
-						<a href="">Logout</a>
+						<ul>
+							<li><a href="">Profile</a></li>
+							<li><a href="">FAQ’s</a></li>
+							<li><a href="">Contact us</a></li>
+							<li><a href="">Logout</a></li>
+						</ul>
 					</div>
 				</div>
 			</div>
+
+			<div class="body_info">
+				<div class="room">
+					<p>Room</p>
+					<div>
+						<div>
+							<img src="" alt="" />
+							<p>Kitchen</p>
+							<p>8 Devices</p>
+						</div>
+						<div>
+							<img src="" alt="" />
+							<p>Kitchen</p>
+							<p>8 Devices</p>
+						</div>
+						<div>
+							<img src="" alt="" />
+							<p>Kitchen</p>
+							<p>8 Devices</p>
+						</div>
+						<div>
+							<img src="" alt="" />
+							<p>Kitchen</p>
+							<p>8 Devices</p>
+						</div>
+					</div>
+				</div>
+				<div class="level">
+					<p>Level</p>
+					<div>
+						<div></div>
+						<div></div>
+					</div>
+				</div>
+			</div>
+
 			<div>
 				<h1>Данные датчиков</h1>
 				<div id="data">
