--- a/sensors_client.html
+++ b/sensors_client.html
@@ -9,32 +9,37 @@
 			type="text/javascript"
 		></script>
 		<link rel="stylesheet" href="./sensor_client.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div class="body_blocks">
 			<div class="nav">
 				<div class="profile">
-					<img src="" alt="" />
+					<img src="./img/Rectangle 2.png" alt="" />
+					<div class="profile_text">
 					<p id="status">Hello 👋</p>
 					<p>Jenifer Feroz</p>
+				</div>
 				</div>
 				<div class="nav_menu">
 					<p>Menu</p>
 					<div class="nav_menu_1">
 						<ul>
-							<li><a href="">Menu</a></li>
-							<li><a href="">Insights</a></li>
-							<li><a href="">Recommends</a></li>
-							<li><a id="messages" href="">Messages</a></li>
+							<li><img src="./img/Home.svg" alt=""><a href="">Menu</a></li>
+							<li><img src="./img/Chart.svg" alt=""><a href="">Insights</a></li>
+							<li><img src="./img/Vector.svg" alt=""><a href="">Recommends</a></li>
+							<li><img src="./img/Message.svg" alt=""><a id="messages" href="">Messages</a></li>
 						</ul>
 					</div>
 					<p>Settings</p>
 					<div class="nav_menu_2">
 						<ul>
-							<li><a href="">Profile</a></li>
-							<li><a href="">FAQ’s</a></li>
-							<li><a href="">Contact us</a></li>
-							<li><a href="">Logout</a></li>
+							<li><img src="./img/Profile.svg" alt=""><a href="">Profile</a></li>
+							<li><img src="./img/Info Square.svg" alt=""><a href="">FAQ’s</a></li>
+							<li><img src="./img/Calling.svg" alt=""><a href="">Contact us</a></li>
+							<li><img src="./img/Logout.svg" alt=""><a href="">Logout</a></li>
 						</ul>
 					</div>
 				</div>
@@ -42,40 +47,63 @@
 
 			<div class="body_info">
 				<div class="room">
-					<p>Room</p>
-					<div>
-						<div>
-							<img src="" alt="" />
+					<h1>Room</h1>
+					<div class="room_sensor">
+						<div class="kitchen">
+							<img src="./img/kitchen-cooker-utensils-icon.svg" alt="" />
 							<p>Kitchen</p>
 							<p>8 Devices</p>
 						</div>
-						<div>
-							<img src="" alt="" />
-							<p>Kitchen</p>
-							<p>8 Devices</p>
+						<div class="living_room">
+							<img src="./img/living-room-icon.svg" alt="" />
+							<p>Living Room</p>
+							<p>12 Devices</p>
 						</div>
-						<div>
-							<img src="" alt="" />
-							<p>Kitchen</p>
-							<p>8 Devices</p>
+						<div class="bedroom">
+							<img src="./img/double-bed-icon.svg" alt="" />
+							<p>Bedroom</p>
+							<p>4 Devices</p>
 						</div>
-						<div>
-							<img src="" alt="" />
-							<p>Kitchen</p>
-							<p>8 Devices</p>
+						<div class="bathroom">
+							<img src="./img/bathtub-icon.svg" alt="" />
+							<p>Bathroom</p>
+							<p>3 Devices</p>
 						</div>
 					</div>
 				</div>
 				<div class="level">
-					<p>Level</p>
-					<div>
+					<h1>Level</h1>
+					<div class="graph">
 						<div></div>
 						<div></div>
 					</div>
 				</div>
+				<div class="device">
+					<h1>Devices</h1>
+					<div class="device_sensor">
+						<div class="air_conditioner">
+							<img src="./img/snowflake-icon (1) 1.svg" alt="">
+							<p>Air Conditioner</p>
+						</div>
+						<div class="smart_tv">
+							<img src="./img/snowflake-icon (1) 1 (1).svg" alt="">
+							<p>Smart TV</p>
+						</div>
+						<div class="coffee_machine">
+							<img src="./img/snowflake-icon (1) 1 (2).svg" alt="">
+							<p>Coffee Machine</p>
+						</div>
+						<div class="refrigerator">
+							<img src="./img/snowflake-icon (1) 1 (3).svg" alt="">
+							<p>Refrigerator</p>
+						</div>
+					</div>
+				</div>
 			</div>
+<div class="line">
 
-			<div>
+</div>
+			<!--<div>
 				<h1>Данные датчиков</h1>
 				<div id="data">
 					<p>Температура: <span id="temperature">--</span> °C</p>
@@ -227,6 +255,6 @@
 				message.destinationName = topic;
 				client.send(message);
 			}
-		</script>
+		</script>-->
 	</body>
 </html>
