4st добавил область под подключение датчиков

--- a/sensors_client.html
+++ b/sensors_client.html
@@ -74,8 +74,20 @@
 				<div class="level">
 					<h1>Level</h1>
 					<div class="graph">
-						<div></div>
-						<div></div>
+						<div class="sensor_1">
+							<div class="sensor_1_text">
+								<p>Назавание датчика</p>
+								<p>выпадающий список</p>
+							</div>
+							<p>Показание</p>
+						</div>
+						<div class="sensor_2">
+							<div class="sensor_2_text">
+								<p>Назавание</p>
+								<p>выпадающий список</p>
+							</div>
+							<p>Показание</p>
+						</div>
 					</div>
 				</div>
 				<div class="device">
@@ -100,9 +112,7 @@
 					</div>
 				</div>
 			</div>
-<div class="line">
-
-</div>
+			<div class="line"></div>
 			<!--<div>
 				<h1>Данные датчиков</h1>
 				<div id="data">
