--- a/sensors_client.html
+++ b/sensors_client.html
@@ -77,14 +77,22 @@
 						<div class="sensor_1">
 							<div class="sensor_1_text">
 								<p>Назавание датчика</p>
-								<p>выпадающий список</p>
+								<select name="choice_sensor" id="sensor_select">
+  									<option value="">--Please choose an sensors--</option>
+  									<option value="temperature">Temperature</option>
+  									<option value="humidity">Humidity</option>
+								</select>
 							</div>
 							<p>Показание</p>
 						</div>
 						<div class="sensor_2">
 							<div class="sensor_2_text">
 								<p>Назавание</p>
-								<p>выпадающий список</p>
+								<select name="choice_sensor" id="sensor_select">
+  									<option value="">--Please choose an sensors--</option>
+  									<option value="temperature">Temperature</option>
+  									<option value="humidity">Humidity</option>
+								</select>
 							</div>
 							<p>Показание</p>
 						</div>
