--- a/sensors_client.html
+++ b/sensors_client.html
@@ -102,25 +102,71 @@
 					<h1>Devices</h1>
 					<div class="device_sensor">
 						<div class="air_conditioner">
+							<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
 							<img src="./img/snowflake-icon (1) 1.svg" alt="">
 							<p>Air Conditioner</p>
 						</div>
 						<div class="smart_tv">
+							<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
 							<img src="./img/snowflake-icon (1) 1 (1).svg" alt="">
 							<p>Smart TV</p>
 						</div>
 						<div class="coffee_machine">
+							<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
 							<img src="./img/snowflake-icon (1) 1 (2).svg" alt="">
 							<p>Coffee Machine</p>
 						</div>
 						<div class="refrigerator">
+							<input type="checkbox" id="switch" /><label for="switch">Toggle</label> 
 							<img src="./img/snowflake-icon (1) 1 (3).svg" alt="">
+							
 							<p>Refrigerator</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="line"></div>
+
+			<div class="end_body">
+				<div class="info_bar">
+					<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
+					<a href=""><img src="./img/Notification.svg" alt=""></a>
+					<a href=""><img src="./img/help-circle.svg" alt=""></a>
+				</div>
+				<div class="members">
+					<div class="members_tag">
+						<p>Members</p>
+						<a href="">View all</a>
+					</div>
+					<div class="members_list">
+						<div>
+							<img src="./img/Rectangle 2 (0).png" alt="">
+							<div>
+								<p>Jaquiline</p>
+								<p>Full Access</p>
+							</div>
+						</div>
+						<div>
+							<img src="./img/Rectangle 2 (1).png" alt="">
+							<div>
+								<p>Sennorita</p>
+								<p>Limited Access</p>
+							</div>
+						</div>
+						<div>
+							<img src="./img/Rectangle 2 (2).png" alt="">
+							<div>
+								<p>Firoz</p>
+								<p>Full Access</p>
+							</div>
+						</div>
+					</div>
+					<div class="add_member">
+						<a href="">Add Member</a>
+					</div>
+				</div>
+			</div>
+
 			<!--<div>
 				<h1>Данные датчиков</h1>
 				<div id="data">
