--- a/sensors_client.html
+++ b/sensors_client.html
@@ -9,9 +9,12 @@
 			type="text/javascript"
 		></script>
 		<link rel="stylesheet" href="./sensor_client.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<div class="body_blocks">
@@ -19,27 +22,43 @@
 				<div class="profile">
 					<img src="./img/Rectangle 2.png" alt="" />
 					<div class="profile_text">
-					<p id="status">Hello 👋</p>
-					<p>Jenifer Feroz</p>
-				</div>
+						<p id="status">Hello 👋</p>
+						<p>Jenifer Feroz</p>
+					</div>
 				</div>
 				<div class="nav_menu">
 					<p>Menu</p>
 					<div class="nav_menu_1">
 						<ul>
-							<li><img src="./img/Home.svg" alt=""><a href="">Menu</a></li>
-							<li><img src="./img/Chart.svg" alt=""><a href="">Insights</a></li>
-							<li><img src="./img/Vector.svg" alt=""><a href="">Recommends</a></li>
-							<li><img src="./img/Message.svg" alt=""><a id="messages" href="">Messages</a></li>
+							<li><img src="./img/Home.svg" alt="" /><a href="">Menu</a></li>
+							<li>
+								<img src="./img/Chart.svg" alt="" /><a href="">Insights</a>
+							</li>
+							<li>
+								<img src="./img/Vector.svg" alt="" /><a href="">Recommends</a>
+							</li>
+							<li>
+								<img src="./img/Message.svg" alt="" /><a id="messages" href=""
+									>Messages</a
+								>
+							</li>
 						</ul>
 					</div>
 					<p>Settings</p>
 					<div class="nav_menu_2">
 						<ul>
-							<li><img src="./img/Profile.svg" alt=""><a href="">Profile</a></li>
-							<li><img src="./img/Info Square.svg" alt=""><a href="">FAQ’s</a></li>
-							<li><img src="./img/Calling.svg" alt=""><a href="">Contact us</a></li>
-							<li><img src="./img/Logout.svg" alt=""><a href="">Logout</a></li>
+							<li>
+								<img src="./img/Profile.svg" alt="" /><a href="">Profile</a>
+							</li>
+							<li>
+								<img src="./img/Info Square.svg" alt="" /><a href="">FAQ’s</a>
+							</li>
+							<li>
+								<img src="./img/Calling.svg" alt="" /><a href="">Contact us</a>
+							</li>
+							<li>
+								<img src="./img/Logout.svg" alt="" /><a href="">Logout</a>
+							</li>
 						</ul>
 					</div>
 				</div>
@@ -78,9 +97,9 @@
 							<div class="sensor_1_text">
 								<p>Назавание датчика</p>
 								<select name="choice_sensor" id="sensor_select">
-  									<option value="">--Please choose an sensors--</option>
-  									<option value="temperature">Temperature</option>
-  									<option value="humidity">Humidity</option>
+									<option value="">--Please choose an sensors--</option>
+									<option value="temperature">Temperature</option>
+									<option value="humidity">Humidity</option>
 								</select>
 							</div>
 							<p>Показание</p>
@@ -89,9 +108,9 @@
 							<div class="sensor_2_text">
 								<p>Назавание</p>
 								<select name="choice_sensor" id="sensor_select">
-  									<option value="">--Please choose an sensors--</option>
-  									<option value="temperature">Temperature</option>
-  									<option value="humidity">Humidity</option>
+									<option value="">--Please choose an sensors--</option>
+									<option value="temperature">Temperature</option>
+									<option value="humidity">Humidity</option>
 								</select>
 							</div>
 							<p>Показание</p>
@@ -102,36 +121,60 @@
 					<h1>Devices</h1>
 					<div class="device_sensor">
 						<div class="air_conditioner">
-							<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
-							<img src="./img/snowflake-icon (1) 1.svg" alt="">
+							<input type="checkbox" class="switch" id="switch" /><label
+								class="label"
+								for="switch"
+								>Toggle</label
+							>
+							<img src="./img/snowflake-icon (1) 1.svg" alt="" />
+
 							<p>Air Conditioner</p>
 						</div>
 						<div class="smart_tv">
-							<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
-							<img src="./img/snowflake-icon (1) 1 (1).svg" alt="">
+							<input type="checkbox" class="switch" id="switch1" /><label
+								class="label"
+								for="switch1"
+								>Toggle</label
+							>
+							<img src="./img/snowflake-icon (1) 1 (1).svg" alt="" />
+
 							<p>Smart TV</p>
 						</div>
 						<div class="coffee_machine">
-							<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
-							<img src="./img/snowflake-icon (1) 1 (2).svg" alt="">
+							<input type="checkbox" class="switch" id="switch2" /><label
+								class="label"
+								for="switch2"
+								>Toggle</label
+							>
+							<img src="./img/snowflake-icon (1) 1 (2).svg" alt="" />
+
 							<p>Coffee Machine</p>
 						</div>
 						<div class="refrigerator">
-							<input type="checkbox" id="switch" /><label for="switch">Toggle</label> 
-							<img src="./img/snowflake-icon (1) 1 (3).svg" alt="">
-							
+							<input type="checkbox" class="switch" id="switch3" /><label
+								class="label"
+								for="switch3"
+								>Toggle</label
+							>
+							<img src="./img/snowflake-icon (1) 1 (3).svg" alt="" />
+
 							<p>Refrigerator</p>
 						</div>
 					</div>
 				</div>
 			</div>
+
 			<div class="line"></div>
 
 			<div class="end_body">
 				<div class="info_bar">
-					<input type="checkbox" id="switch" /><label for="switch">Toggle</label>
-					<a href=""><img src="./img/Notification.svg" alt=""></a>
-					<a href=""><img src="./img/help-circle.svg" alt=""></a>
+					<input type="checkbox" class="switch_2" id="switch4" /><label
+						class="label_2"
+						for="switch4"
+						>Toggle</label
+					>
+					<a href=""><img src="./img/Notification.svg" alt="" /></a>
+					<a href=""><img src="./img/help-circle.svg" alt="" /></a>
 				</div>
 				<div class="members">
 					<div class="members_tag">
@@ -139,35 +182,43 @@
 						<a href="">View all</a>
 					</div>
 					<div class="members_list">
-						<div>
-							<img src="./img/Rectangle 2 (0).png" alt="">
-							<div>
-								<p>Jaquiline</p>
+						<div class="jaquiline">
+							<img src="./img/Rectangle 2 (0).png" alt="" />
+							<div class="jaquiline_text">
+								<h1>Jaquiline</h1>
 								<p>Full Access</p>
 							</div>
 						</div>
-						<div>
-							<img src="./img/Rectangle 2 (1).png" alt="">
-							<div>
-								<p>Sennorita</p>
+						<div class="sennorita">
+							<img src="./img/Rectangle 2 (1).png" alt="" />
+							<div class="sennorita_text">
+								<h1>Sennorita</h1>
 								<p>Limited Access</p>
 							</div>
 						</div>
-						<div>
-							<img src="./img/Rectangle 2 (2).png" alt="">
-							<div>
-								<p>Firoz</p>
+						<div class="firoz">
+							<img src="./img/Rectangle 2 (2).png" alt="" />
+							<div class="firoz_text">
+								<h1>Firoz</h1>
 								<p>Full Access</p>
 							</div>
 						</div>
-					</div>
-					<div class="add_member">
-						<a href="">Add Member</a>
+						<div class="add_member">
+							<a href="">Add Member</a>
+						</div>
 					</div>
 				</div>
+				<div class="history">
+					<div class="history_text">
+						<p>History</p>
+						<a href="">View all</a>
+					</div>
+					<div></div>
+				</div>
 			</div>
+		</div>
 
-			<!--<div>
+		<!--<div>
 				<h1>Данные датчиков</h1>
 				<div id="data">
 					<p>Температура: <span id="temperature">--</span> °C</p>
