--- a/sensors_client.html
+++ b/sensors_client.html
@@ -90,6 +90,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="level">
 					<h1>Level</h1>
 					<div class="graph">
@@ -117,6 +118,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="device">
 					<h1>Devices</h1>
 					<div class="device_sensor">
@@ -213,7 +215,40 @@
 						<p>History</p>
 						<a href="">View all</a>
 					</div>
-					<div></div>
+					<div class="history_sensor">
+						<div class="air_conditioner_sensor">
+							<div class="signal"></div>
+							<div class="history_sensor_text">
+								<p>Air Conditioner</p>
+								<p>Turned on</p>
+							</div>
+							<div class="history_sensor_time">3:20</div>
+						</div>
+						<div class="smart_tv_sensor">
+							<div class="signal"></div>
+							<div class="history_sensor_text">
+								<p>Smart TV</p>
+								<p>Turned on</p>
+							</div>
+							<div class="history_sensor_time">6:27</div>
+						</div>
+						<div class="refrigerator_sensor">
+							<div class="signal"></div>
+							<div class="history_sensor_text">
+								<p>Refrigerator</p>
+								<p>Turned on</p>
+							</div>
+							<div class="history_sensor_time">11:50</div>
+						</div>
+						<div class="coffee_machine_sensor">
+							<div class="signal"></div>
+							<div class="history_sensor_text">
+								<p>Coffee Machine</p>
+								<p>Turned on</p>
+							</div>
+							<div class="history_sensor_time">9:15</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
