--- a/sensors_client.html
+++ b/sensors_client.html
@@ -44,6 +44,8 @@
 							</li>
 						</ul>
 					</div>
+					<input type="time" id="timeInput" />
+					<button onclick="sendTime()">Send</button>
 					<p>Settings</p>
 					<div class="nav_menu_2">
 						<ul>
