--- a/sensors_client.html
+++ b/sensors_client.html
@@ -44,8 +44,7 @@
 							</li>
 						</ul>
 					</div>
-					<input type="time" id="timeInput" />
-					<button onclick="sendTime()">Send</button>
+
 					<p>Settings</p>
 					<div class="nav_menu_2">
 						<ul>
@@ -166,7 +165,12 @@
 
 			<div class="end_body">
 				<div class="info_bar">
-					<input type="checkbox" class="switch_2" id="switch4" onchange="handleCheckboxChange()" />
+					<input
+						type="checkbox"
+						class="switch_2"
+						id="switch4"
+						onchange="handleCheckboxChange()"
+					/>
 					<label class="label_2" for="switch4">Toggle</label>
 					<a href=""><img src="./img/Notification.svg" alt="" /></a>
 					<a href=""><img src="./img/help-circle.svg" alt="" /></a>
@@ -282,20 +286,19 @@
 
 			function disconnect() {
 				if (client.isConnected()) {
-				client.disconnect();
-				console.log('disconnected');
+					client.disconnect();
+					console.log("disconnected");
+				}
 			}
-  }
 
 			function handleCheckboxChange() {
-				var checkbox = document.getElementById('switch4');
+				var checkbox = document.getElementById("switch4");
 				if (checkbox.checked) {
 					connect();
 				} else {
 					disconnect();
 				}
 			}
-			
 
 			function onConnect() {
 				console.log("Connected to MQTT broker");
