--- a/sensors_client.html
+++ b/sensors_client.html
@@ -67,7 +67,7 @@
 			</div>
 
 			<div class="body_info">
-				<div class="room">
+				<!--<div class="room">
 					<h1>Room</h1>
 					<div class="room_sensor">
 						<div class="kitchen">
@@ -90,27 +90,48 @@
 							<p>Bathroom</p>
 							<p>3 Devices</p>
 						</div>
-					</div>
-				</div>
+				</div>-->
 
 				<div class="level">
 					<h1>Level</h1>
-					<div class="graph">
-						<div class="sensor_1">
-							<div class="sensor_1_text">
-								<p>Назавание датчика</p>
+					<div class="line_1">
+						<div class="graph">
+							<div class="sensor_1">
+								<div class="sensor_1_text">
+									<p>Назавание датчика</p>
+								</div>
+								<p>Показание</p>
 								<p>Влажность: <span id="humidity">--</span>%</p>
-							</div>
-							<p>Показание</p>
-							<p>Влажность: <span id="humidity">--</span>%</p>
-						</div>
-						<div class="sensor_2">
-							<div class="sensor_2_text">
-								<p>Назавание</p>
 								<p>Температура: <span id="temperature">--</span> °C</p>
 							</div>
-							<p>Показание</p>
-							<p>Температура: <span id="temperature">--</span> °C</p>
+							<div class="sensor_2">
+								<div class="sensor_2_text">
+									<p>Назавание датчика</p>
+								</div>
+								<p>Показание</p>
+								<p>Влажность: <span id="humidity">--</span>%</p>
+								<p>Температура: <span id="temperature">--</span> °C</p>
+							</div>
+						</div>
+					</div>
+					<div class="line_2">
+						<div class="graph">
+							<div class="sensor_1">
+								<div class="sensor_1_text">
+									<p>Назавание датчика</p>
+								</div>
+								<p>Показание</p>
+								<p>Влажность: <span id="humidity">--</span>%</p>
+								<p>Температура: <span id="temperature">--</span> °C</p>
+							</div>
+							<div class="sensor_2">
+								<div class="sensor_2_text">
+									<p>Назавание датчика</p>
+								</div>
+								<p>Показание</p>
+								<p>Влажность: <span id="humidity">--</span>%</p>
+								<p>Температура: <span id="temperature">--</span> °C</p>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -155,7 +176,6 @@
 								>Toggle</label
 							>
 							<img src="./img/snowflake-icon (1) 1 (3).svg" alt="" />
-
 							<p>Refrigerator</p>
 						</div>
 					</div>
@@ -166,7 +186,12 @@
 
 			<div class="end_body">
 				<div class="info_bar">
-					<input type="checkbox" class="switch_2" id="switch4" onchange="handleCheckboxChange()" />
+					<input
+						type="checkbox"
+						class="switch_2"
+						id="switch4"
+						onchange="handleCheckboxChange()"
+					/>
 					<label class="label_2" for="switch4">Toggle</label>
 					<a href=""><img src="./img/Notification.svg" alt="" /></a>
 					<a href=""><img src="./img/help-circle.svg" alt="" /></a>
@@ -269,7 +294,7 @@
 		<script>
 			const client = new Paho.MQTT.Client(
 				"test.mosquitto.org",
-				Number(8080),
+				Number(8081),
 				"",
 				"sensors_client_js_4"
 			);
@@ -282,20 +307,19 @@
 
 			function disconnect() {
 				if (client.isConnected()) {
-				client.disconnect();
-				console.log('disconnected');
+					client.disconnect();
+					console.log("disconnected");
+				}
 			}
-  }
 
 			function handleCheckboxChange() {
-				var checkbox = document.getElementById('switch4');
+				var checkbox = document.getElementById("switch4");
 				if (checkbox.checked) {
 					connect();
 				} else {
 					disconnect();
 				}
 			}
-			
 
 			function onConnect() {
 				console.log("Connected to MQTT broker");
@@ -418,6 +442,19 @@
 				message.destinationName = topic;
 				client.send(message);
 			}
+
+			document.addEventListener("DOMContentLoaded", function () {
+				var checkbox = document.querySelector("#switch1");
+				var sensorReadings = document.querySelector(".sensor_1");
+
+				checkbox.addEventListener("change", function () {
+					if (this.checked) {
+						sensorReadings.style.display = "block";
+					} else {
+						sensorReadings.style.display = "none";
+					}
+				});
+			});
 		</script>
 	</body>
 </html>
